# rummy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci-clang.yml  ci-gcc.yml
cmake/: RummyConfig.cmake.in  RummyTestingCoverage.cmake
inputs/: artemis.par  example.par
rummy/: CMakeLists.txt  deck.cpp  deck.hpp  main.cpp  rummy_utils.hpp
tst/: CMakeLists.txt  catch2_main.cpp
tst/unit/: CMakeLists.txt  test.cpp
utils/: pips.patch
